# scan2ocr

./: CMakeLists.txt  PKGBUILD  README.md  german.ts  scan2ocr.qrc
.github/workflows/: cmake-single-platform.yml  code-analysis.yml  codeql.yml
icons/: Icons.odg
src/: application-style.css  cfmain.cpp  cfmain.h  cfopen.cpp  cfopen.h  chatwindow.cpp  chatwindow.h  ftpconnection.cpp  ftpconnection.h  mainwindow.cpp  mainwindow.h  parseurl.cpp  parseurl.h  pdffile.cpp  pdffile.h  pdfparse.cpp  pdfparse.h  scan2ocr.cpp  scan2ocr.h  settings.cpp  settings.h  threadpool.h
